# taichi_collisional

./: .#integrator.h  CMakeLists.txt  Makefile  README.md  Taichi  Taichi_cosmo.cxx  build_tree.h  common.h  dat.10  evolve.h  exafmm.h  integrator.h  integrator.h.bak  integrator_tasks.h  io.h  kernel.cxx  kernel.h  kernel_fast.h  kernel_fast_lean.h  kernel_fast_lean.h.save  kernel_fast_omp.h  kernel_fast_tbb.h  kernel_rotate.h  kernel_rotate_two_arrays.h  load_gadget.h  main.cxx  plot_result.py  radixtree.cxx  radixtree.h  run.pbs  timer.h  timestep.h  traverse_eager.h  traverse_eager_omp.h  traverse_eager_tbb.h  traverse_lazy.h  tree.cxx  tree.h  universal.h
include/: CMakeCache.txt  Makefile  cmake_install.cmake
multipole_rotation_matrix/: rotate_order_11.txt  rotate_order_14.txt  rotate_order_16.txt  rotate_order_17.txt  rotate_order_19.txt  rotate_order_20.txt  rotate_order_21.txt  rotate_order_22.txt  rotate_order_23.txt  rotate_order_24.txt  rotate_order_25.txt  rotate_order_26.txt  rotate_order_27.txt  rotate_order_28.txt  rotate_order_30.txt  rotate_order_4.txt  rotate_order_6.txt  rotate_order_7.txt
src/: allvars.cpp  allvars.h  hilbert.h  main.cpp  test.sh  tree.h
src/vectorclass/: vectorclass.h
taichi_with_jerks/: Makefile  Taichi  build_tree.h  exafmm.h  integrator.h  io.h  kernel_fast_lean.h  kernel_rotate.h  kernel_rotate_two_arrays.h  miniball.hpp  plot_jerk_error.py  taichi.cxx  test  test.cxx  traverse_eager.h
taichi_with_jerks/multipole_rotation_matrix/: rotate_order_10.txt  rotate_order_12.txt  rotate_order_13.txt  rotate_order_15.txt  rotate_order_18.txt  rotate_order_29.txt  rotate_order_3.txt  rotate_order_5.txt  rotate_order_8.txt  rotate_order_9.txt
vectorclass/special/: vector3d.h
